Overflow problem solved not completely

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -141,7 +141,7 @@ body {
 .container,
 .content-section,
 .faq-text {
-	overflow-y: hidden;
+	overflow-y: hidden !important;
 }
 
 /* ******************* scroll bar *************** */
